<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_food"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/eat_amp_drinks" />
        <item
            android:id="@+id/drawer_shopping"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shopping" />
        <item
            android:id="@+id/drawer_monuments"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/monuments" />
        <item
            android:id="@+id/drawer_funactivity"
            android:icon="@drawable/ic_beenhere_black_24dp"
            android:title="@string/fun_activities" />
    </group>

</menu>