<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                        android:id="@+id/dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        app:dampingRatio="0.5"
                        app:dotsColor="@color/colorPrimaryDark"
                        app:dotsCornerRadius="8dp"
                        app:dotsSize="12dp"
                        app:dotsSpacing="2dp"
                        app:dotsStrokeColor="#D3CFCF"
                        app:dotsStrokeWidth="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:stiffness="300" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/delhi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/about_delhi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/more_about_delhi" />

               <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/recomandation_line"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/eatAndDrink"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/button_layout"
                        android:drawableTop="@drawable/ic_restaurant_menu_black_24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/eat_amp_drinks"
                        app:layout_constraintBottom_toTopOf="@id/monuments"
                        app:layout_constraintEnd_toStartOf="@id/shopping"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/shopping"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/button_layout"
                        android:drawableTop="@drawable/ic_shopping_cart_black_24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/shopping"
                        app:layout_constraintBottom_toTopOf="@id/funActivities"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/eatAndDrink"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/monuments"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/button_layout"
                        android:drawableTop="@drawable/ic_location_city_black_24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"

                        android:text="@string/monuments"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/funActivities"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/eatAndDrink" />

                    <Button
                        android:id="@+id/funActivities"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/button_layout"
                        android:drawableTop="@drawable/ic_beenhere_black_24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/fun_activities"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/monuments"
                        app:layout_constraintTop_toBottomOf="@id/shopping" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/whiteColor"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />
</androidx.drawerlayout.widget.DrawerLayout>
